// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Send > Address step > should render the Send component Address step 1`] = `
<div
  class="operation svelte-1y886qs"
>
  <div
    class="dusk-wizard"
  >
    
     
     
     
    <div
      class="operation__send svelte-1y886qs"
      style="animation: __svelte_3516408220_0 400ms linear 0ms 1 both;"
    >
      <dl
        class="contract-statuses svelte-19157rx"
      >
        <dt
          class="contract-statuses__label svelte-19157rx"
        >
          Spendable
           
        </dt>
        <dd
          class="contract-statuses__value svelte-19157rx"
        >
          <span>
            1,000.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--default contract-statuses__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
        </dd>
      </dl>
       
      <div
        class="operation__send-amount operation__space-between svelte-1y886qs"
      >
        <p>
          Enter address:
        </p>
         
        <button
          class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--small"
          disabled=""
          type="button"
        >
          <span
            class="dusk-button__text"
          >
            SCAN QR
          </span>
        </button>
      </div>
       
      <textarea
        class="dusk-textbox dusk-textbox-multiline operation__send-address
						operation__send-address--invalid"
      />
      
       
      <div
        class="scan svelte-1uf7z44"
      >
        <video
          class="svelte-1uf7z44"
        >
          <track
            kind="captions"
          />
        </video>
         
        <div
          class="scan__highlight svelte-1uf7z44"
        />
         
        <button
          class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--small"
          type="button"
        >
          <span
            class="dusk-button__text"
          >
            CLOSE
          </span>
        </button>
      </div>
    </div>
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        disabled=""
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          Next
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
          />
        </svg>
        
      </button>
    </div>
    
    
     
    
     
    
  </div>
</div>
`;

exports[`Send > Amount step > should render the Send component Amount step 1`] = `
<div
  class="operation svelte-1y886qs"
>
  <div
    class="dusk-wizard"
  >
     
     
    <div
      class="operation__send svelte-1y886qs"
    >
      <dl
        class="contract-statuses svelte-19157rx"
      >
        <dt
          class="contract-statuses__label svelte-19157rx"
        >
          Spendable
           
        </dt>
        <dd
          class="contract-statuses__value svelte-19157rx"
        >
          <span>
            1,000.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--default contract-statuses__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
        </dd>
      </dl>
       
      <div
        class="operation__send-amount operation__space-between svelte-1y886qs"
      >
        <p>
          Enter amount:
        </p>
         
        <button
          class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
          type="button"
        >
          <span
            class="dusk-button__text"
          >
            USE MAX
          </span>
        </button>
      </div>
       
      <div
        class="operation__send-amount operation__input svelte-1y886qs"
      >
        <input
          class="dusk-textbox dusk-textbox-number operation__input-field"
          max="999.98"
          min="1e-9"
          required=""
          step="0.000000001"
          type="number"
        />
        
         
        <svg
          class="dusk-icon dusk-icon--size--default"
          data-tooltip-id="main-tooltip"
          data-tooltip-text="DUSK"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
          />
        </svg>
        
      </div>
       
      <div
        class="gas-settings svelte-1daay07"
      >
        <dl
          class="gas-settings__edit svelte-1daay07"
        >
          <div
            class="gas-fee svelte-x1l5rc"
          >
            <span>
              Max Gas Fee:
            </span>
             
            <div
              class="gas-fee__amount svelte-x1l5rc"
            >
              <span
                class="gas-fee__amount-value svelte-x1l5rc"
              >
                0.020000000
              </span>
               
              <svg
                class="dusk-icon dusk-icon--size--default dusk-amount__icon"
                data-tooltip-id="main-tooltip"
                data-tooltip-text="DUSK"
                role="graphics-symbol"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
                />
              </svg>
              
            </div>
          </div>
          <dd>
            <button
              class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
              type="button"
            >
              <span
                class="dusk-button__text"
              >
                EDIT
              </span>
            </button>
          </dd>
        </dl>
         
      </div>
    </div>
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          Next
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
          />
        </svg>
        
      </button>
    </div>
    
    
     
    
     
    
     
    
  </div>
</div>
`;

exports[`Send > Review step > should render the Send component Review step 1`] = `
<div
  class="operation svelte-1y886qs"
>
  <div
    class="dusk-wizard"
  >
    
     
    
     
     
     
    <div
      class="operation__send svelte-1y886qs"
      style="animation: __svelte_3516408220_0 400ms linear 0ms 1 both;"
    >
      <dl
        class="contract-statuses svelte-19157rx"
      >
        <dt
          class="contract-statuses__label svelte-19157rx"
        >
          Spendable
           
        </dt>
        <dd
          class="contract-statuses__value svelte-19157rx"
        >
          <span>
            1,000.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--default contract-statuses__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
        </dd>
      </dl>
       
      <span
        class="dusk-badge dusk-badge--variant-warning operation__review-notice"
      >
        REVIEW TRANSACTION
      </span>
       
      <dl
        class="operation__review-transaction svelte-1y886qs"
      >
        <dt
          class="review-transaction__label svelte-1y886qs"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,7L17,12H14V16H10V12H7L12,7M19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21M19,19V5H5V19H19Z"
            />
          </svg>
          
           
          <span>
            Amount:
          </span>
           
        </dt>
        <dd
          class="review-transaction__value operation__review-amount svelte-1y886qs"
        >
          <span>
            2,345.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--default dusk-amount__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
        </dd>
      </dl>
       
      <dl
        class="operation__review-transaction svelte-1y886qs"
      >
        <dt
          class="review-transaction__label svelte-1y886qs"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
            />
          </svg>
          
           
          <span>
            To:
          </span>
           
        </dt>
        <dd
          class="operation__review-address svelte-1y886qs"
        >
          <span>
            47jNTgAhzn9KCKF3msCfvKg3k1P1QpPCLZ3HG3AoNp87sQ5WNS3QyjckYHWeuXqW7uvLmbKgejpP8Xkcip89vnMM
          </span>
        </dd>
      </dl>
       
      <div
        class="gas-fee svelte-x1l5rc"
      >
        <span>
          Max Gas Fee:
        </span>
         
        <div
          class="gas-fee__amount svelte-x1l5rc"
        >
          <span
            class="gas-fee__amount-value svelte-x1l5rc"
          >
            0.020000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--default dusk-amount__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default dusk-icon-button--labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,7L17,12H14V16H10V12H7L12,7M19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21M19,19V5H5V19H19Z"
          />
        </svg>
        
         
        <span
          class="dusk-button__text"
        >
          SEND
        </span>
        
      </button>
    </div>
    
    
     
    
  </div>
</div>
`;
